[package]
authors = ["Sojan James <sojan.james@gmail.com>"]
name = "hello"
edition = "2018"
version = "0.2.0"


[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
freertos-rust = "*"
embedded-hal = "^0.2.4"  # Access to generic embedded functions (`set_high`)
stm32f1 = "0.14"
nb = "0.1"
rand = {version = "0.8.3", default-features = false, features = ["small_rng"]}
rust-fsm = { version = "0.5", default-features = false }
eeprom = {git = "https://github.com/sjames/eeprom.git", version = "0.2.0", features = ["stm32f103"]}

[dependencies.stm32f1xx-hal]
git = "https://github.com/sjames/stm32f1xx-hal.git"
version = "0.8"
features = ["rt", "stm32f103", "medium",]

[build-dependencies]
freertos-cargo-build = "*"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = true # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
